Added Photo Editing uploading

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dlry9flui",
+    "ApiKey": "935796972159243",
+    "ApiSecret": "l_JV8BH2QvL4xCwtVbXnJ7DC9ws"
+  }
+
 }
